namespace VetClinic.Domain;

/// <summary>
/// Enum representing the status of an appointment
/// </summary>
public enum AppointmentStatus
{
    Scheduled,
    Completed,
    Cancelled
}
