namespace VetClinic.Domain;

/// <summary>
/// Enum representing different types of animals
/// </summary>
public enum Species
{
    Dog,
    Cat,
    Bird,
    Rabbit,
    Hamster,
    Other
}
